--- a/public/chat.html
+++ b/public/chat.html
@@ -5,18 +5,18 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.1/css/all.min.css" integrity="sha256-mmgLkCYLUQbXn0B1SRqzHar6dCnv9oZFPEC1g1cwlkk=" crossorigin="anonymous" />
   <link rel="stylesheet" href="css/style.css">
-  <title>Light Chat App</title>
+  <title>WebCage Chat App</title>
 </head>
 <body>
   <div class="chat-container">
     <header class="chat-header">
-      <h1><i class="fas fa-kiwi-bird"></i> Dixio Light Chat App </h1>
-      <a href="index.html" class="btn" id="leave-btn">Leave Department</a>
+      <h1><i class="fas fa-kiwi-bird"></i> WebCage </h1>
+      <a href="index.html" class="btn" id="leave-btn">Leave Room</a>
     </header>
 
     <main class="chat-main">
       <div class="chat-sidebar">
-        <h2 id="department-name"></h2>
+        <h2 id="room-name"></h2>
         <h3><i class="fas fa-user"></i> Online</h3>
         <ul id="users">
         </ul>
