--- a/public/index.html
+++ b/public/index.html
@@ -1,4 +1,3 @@
-<!-- INSPIRED BY BRAD TRAVERSY CHAT APP -->
 <!DOCTYPE html>
 <html lang="en">
 	<head>
@@ -12,12 +11,12 @@
 			crossorigin="anonymous"
 		/>
 		<link rel="stylesheet" href="css/style.css" />
-		<title>Light Chat App</title>
+		<title>WebCage Chat App</title>
 	</head>
 	<body>
 		<div class="join-container">
 			<header class="join-header">
-				<h1><i class="fas fa-kiwi-bird"></i> Dixio Light Chat </h1>
+				<h1><i class="fas fa-kiwi-bird"></i> WebCage </h1>
 			</header>
 			<main class="join-main">
 				<form action="chat.html">
@@ -45,9 +44,11 @@
 					<div class="form-control">
 						<label for="room">Chat Channel</label>
 						<select name="room" id="room">
-							<option value="Business">Software Development </option>
-							<option value="Technology">Marketing</option>
-							<option value="Sport">Human Resource</option>
+							<option value="Business">Business </option>
+							<option value="Technology">Technology</option>
+							<option value="Sport">Sports</option>
+							<option value="news">International News</option>
+							<option value="cats">Just Cats</option>
 						</select>
 					</div>
           <div class="flex">
